added content for overloading and super()

--- a/lectures/Lecture 3 - OOO, Datetime and Saving Objects.ipynb
+++ b/lectures/Lecture 3 - OOO, Datetime and Saving Objects.ipynb
@@ -378,6 +378,179 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Super"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dog:\n",
+    "    \n",
+    "    def __init__(self, color, breed, name):\n",
+    "        self.color = color\n",
+    "        self.breed = breed\n",
+    "        self.name = name\n",
+    "        self.distance = 0\n",
+    "        \n",
+    "    def walk(self, distance):\n",
+    "        self.distance += distance\n",
+    "        \n",
+    "class Retreiver(Dog):\n",
+    "    \n",
+    "    def __init__(self, color, breed, name, last_name):\n",
+    "        super().__init__(color, breed, name)    \n",
+    "        self.last_name = last_name\n",
+    "        \n",
+    "    def speak(self):\n",
+    "        print(\"My name is {}\".format(self.name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r =  Retreiver(color = \"blue\", breed = \"retreiver\", name = \"Rex\", last_name = \"Rex 2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "blue\n",
+      "retreiver\n",
+      "Rex\n",
+      "Rex 2\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(r.color)\n",
+    "print(r.breed)\n",
+    "print(r.name)\n",
+    "print(r.last_name)\n",
+    "print(r.distance)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Overload\n",
+    "* have a function behave in different ways depending on how it is called or a param is passed to it\n",
+    "* can overload a UDF or a build in function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Overload a UDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Someone is barking\n",
+      "Rex is barking\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Dog:\n",
+    "    def speak(self, name=None):\n",
+    "        if name is not None:\n",
+    "            print(name + \" is barking\")\n",
+    "        else:\n",
+    "            print('Someone is barking')\n",
+    "\n",
+    "# Creating a class instance\n",
+    "d = Dog()\n",
+    "\n",
+    "# Call the method\n",
+    "d.speak()\n",
+    "\n",
+    "# Call the method and pass a parameter\n",
+    "d.speak('Rex')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Overload Built In Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Basket:\n",
+    "    def __init__(self, basket):\n",
+    "        self.basket = basket\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.basket)\n",
+    "\n",
+    "b = Basket(['a', 'b', 'c'])\n",
+    "print(len(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Basket:\n",
+    "    def __init__(self, basket):\n",
+    "        self.basket = basket\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return 50\n",
+    "\n",
+    "b = Basket(['a', 'b', 'c'])\n",
+    "print(len(b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Class Methods\n",
     "* takes cls as the first input\n",
     "* bound to the class, not the instance of the object\n",
