--- a/homework/Assignment 1.ipynb
+++ b/homework/Assignment 1.ipynb
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,6 +392,148 @@
     "    [\"D|item_b\"]\n",
     "]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['D', 'item_b']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"D|item_b\".split(\"|\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A', 'item_a']\n",
+      "['B', 'item_a']\n",
+      "['C', 'item_a']\n",
+      "['C', 'item_b']\n",
+      "['C', 'item_c']\n",
+      "['B', 'item_c']\n",
+      "['D', 'item_b']\n",
+      "['D', 'item_b']\n"
+     ]
+    }
+   ],
+   "source": [
+    "dct = {}\n",
+    "for idx,i in enumerate(transactions):\n",
+    "    \n",
+    "    if idx != 0:\n",
+    "        tmp_lst = i[0].split(\"|\")\n",
+    "        # tmp_lst = [a,item_b] it's list\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        #if tmp_lst[0] not in dct:\n",
+    "        #    dct[tmp_lst[0]] = [tmp_lst[1]]\n",
+    "        #else:\n",
+    "        #    dct[tmp_lst[0]].append(tmp_lst[1])\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object <genexpr> at 0x7fe338260650>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dct = {}\n",
+    "gen = (x[0].split(\"|\") for idx,x in enumerate(transactions) if idx != 0)\n",
+    "gen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A', 'item_a']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(gen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['user_id', 'item_id']\n",
+      "['A', 'item_a']\n",
+      "['B', 'item_a']\n",
+      "['C', 'item_a']\n",
+      "['C', 'item_b']\n",
+      "['C', 'item_c']\n",
+      "['B', 'item_c']\n",
+      "['D', 'item_b']\n",
+      "['D', 'item_b']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in gen:\n",
+    "    if item[0] in dct:\n",
+    "        dct[item[0]].append(item[1])\n",
+    "    else:\n",
+    "        dct[item[0]] = [item[1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
