--- a/challenges/Challenge 1 - N Queens.ipynb
+++ b/challenges/Challenge 1 - N Queens.ipynb
@@ -20,7 +20,7 @@
     "2 - Build an UDF that if a Queen can be place on a given position and returns true or false\n",
     "3 - Apply the 2nd UDF for N queens on an NxN board\n",
     "4 - Repeat #3 until it exhausts the possibilities\n",
-    "5 - Build an UDF thew\n"
+    "5 - Build an UDF that manages the results in a table? or tuple? build an assesment of this object that returns the compiled results.\n"
    ]
   },
   {
