--- a/challenges/Challenge 1 - N Queens.ipynb
+++ b/challenges/Challenge 1 - N Queens.ipynb
@@ -25,6 +25,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For N = 1 \n",
+      "Found 1 solutions.\n",
+      "1\n",
+      "For N = 2 \n",
+      "Found 0 solutions.\n",
+      "0\n",
+      "For N = 3 \n",
+      "Found 0 solutions.\n",
+      "0\n",
+      "For N = 4 \n",
+      "Found 2 solutions.\n",
+      "2\n",
+      "For N = 5 \n",
+      "Found 10 solutions.\n",
+      "10\n",
+      "For N = 6 \n",
+      "Found 4 solutions.\n",
+      "4\n",
+      "For N = 7 \n",
+      "Found 40 solutions.\n",
+      "40\n",
+      "For N = 8 \n",
+      "Found 92 solutions.\n",
+      "92\n",
+      "For N = 9 \n",
+      "Found 352 solutions.\n",
+      "352\n",
+      "For N = 10 \n",
+      "Found 724 solutions.\n",
+      "724\n",
+      "For N = 11 \n",
+      "Found 2680 solutions.\n",
+      "2680\n",
+      "For N = 12 \n",
+      "Found 14200 solutions.\n",
+      "14200\n",
+      "For N = 13 \n",
+      "Found 73712 solutions.\n",
+      "73712\n",
+      "For N = 14 \n",
+      "Found 365596 solutions.\n",
+      "365596\n",
+      "For N = 15 \n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for k in range(1,21):\n",
+    "    print(\"For N = {} \".format(k))\n",
+    "    print(NQueens(k).solutions)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
