added assignment 1 answers

--- a/homework/Assignment 2.ipynb
+++ b/homework/Assignment 2.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
     "* normalize each column of pandas dataframe to 0-1 scale.\n",
     "* hint\n",
     "    * 0-1 is done by using (X - xmin)/(xmax - xmin)\n",
-    "    * the approach should be similar to when we meean centered the dataframe"
+    "    * hint, the approach should be similar to when we mean centered the dataframe"
    ]
   },
   {
