--- a/challenges/Challenge 2 - Face Recognition.ipynb
+++ b/challenges/Challenge 2 - Face Recognition.ipynb
@@ -3,7 +3,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Face Recognition Challenge\n",
+    "\n",
+    "From wikipedia:\n",
+    "    \n",
+    "> Face detection can be regarded as a specific case of object-class detection. In object-class detection, the task is to find the locations and sizes of all objects in an image that belong to a given class. Examples include upper torsos, pedestrians, and cars.\n",
+    "Face-detection algorithms focus on the detection of frontal human faces. It is analogous to image detection in which the image of a person is matched bit by bit. Image matches with the image stores in database. Any facial feature changes in the database will invalidate the matching process.\n",
+    "A reliable face-detection approach based on the genetic algorithm and the eigen-face technique:\n",
+    "Firstly, the possible human eye regions are detected by testing all the valley regions in the gray-level image. Then the genetic algorithm is used to generate all the possible face regions which include the eyebrows, the iris, the nostril and the mouth corners.\n",
+    "Each possible face candidate is normalized to reduce both the lighting effect, which is caused by uneven illumination; and the shirring effect, which is due to head movement. The fitness value of each candidate is measured based on its projection on the eigen-faces. After a number of iterations, all the face candidates with a high fitness value are selected for further verification. At this stage, the face symmetry is measured and the existence of the different facial features is verified for each face candidate.\n",
+    "\n",
+    "## Build a code that finds faces in a given picture.\n",
+    "\n",
+    "1. Build an UDF that finds faces in a given picture.\n",
+    "2. Apply to 3 different pictures ."
+   ]
   },
   {
    "cell_type": "code",
@@ -29,7 +44,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
