--- a/challenges/Challenge 3 - ImageNet.ipynb
+++ b/challenges/Challenge 3 - ImageNet.ipynb
@@ -3,7 +3,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# ImageNet Challenge\n",
+    "\n",
+    "From wikipedia:\n",
+    "    \n",
+    "> The ImageNet project is a large visual database designed for use in visual object recognition software research. More than 14 million images have been hand-annotated by the project to indicate what objects are pictured and in at least one million of the images, bounding boxes are also provided. ImageNet contains more than 20,000 categories with a typical category, such as \"balloon\" or \"strawberry\", consisting of several hundred images. The database of annotations of third-party image URLs is freely available directly from ImageNet, though the actual images are not owned by ImageNet. Since 2010, the ImageNet project runs an annual software contest, the ImageNet Large Scale Visual Recognition Challenge (ILSVRC), where software programs compete to correctly classify and detect objects and scenes. The challenge uses a \"trimmed\" list of one thousand non-overlapping classes.\n",
+    "\n",
+    "## Build a code that finds faces in a given picture.\n",
+    "\n",
+    "1. Build an UDF that trains a ImageNet\n",
+    "2. Classify a given set of pictures"
+   ]
   },
   {
    "cell_type": "code",
@@ -29,7 +40,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
