--- a/lectures/Lecture 10 - RegExp.ipynb
+++ b/lectures/Lecture 10 - RegExp.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -96,28 +96,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019\n",
-      "3000\n",
-      "1990\n"
+      "<re.Match object; span=(0, 2), match='01'>\n",
+      "01 01 None\n",
+      "<re.Match object; span=(0, 2), match='02'>\n",
+      "02 02 None\n",
+      "<re.Match object; span=(0, 2), match='03'>\n",
+      "03 03 None\n"
      ]
     }
    ],
    "source": [
     "import re # <= regular expression library\n",
     "\n",
-    "movies = [\"2019: After the Fall of New York\"\n",
-    "          , \"The exterminators of the year 3000\"\n",
-    "          , \"1990: The Bronx Warriors\"]\n",
+    "\n",
+    "movies = [\"01 - 2019: After the Fall of New York\"\n",
+    "          , \"02 - The exterminators of the year 3000\"\n",
+    "          , \"03 - 1990: The Bronx Warriors\"]\n",
+    "\n",
     "\n",
     "for m in movies:\n",
-    "    print(re.search(\"(\\d\\d\\d\\d)\", m).group(0))"
+    "     a = re.match(r\"(\\d+)*(\\d+)*\",m)\n",
+    "     print(a)\n",
+    "     print(a.group(0),a.group(1),a.group(2))"
    ]
   },
   {
@@ -163,40 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Match starts at 9 ends at 10 and contains 3\n",
-      "Match starts at 10 ends at 11 and contains 8\n",
-      "Match starts at 32 ends at 33 and contains 3\n",
-      "Match starts at 33 ends at 34 and contains 6\n",
-      "Match starts at 54 ends at 55 and contains 1\n",
-      "Match starts at 55 ends at 56 and contains 0\n",
-      "Match starts at 76 ends at 77 and contains 8\n",
-      "Match starts at 102 ends at 103 and contains 3\n"
-     ]
-    }
-   ],
-   "source": [
-    "ages = \"Homer is 38 years old, Marge is 36 years old, Bart is 10 years old, Lisa is 8 years old and Maggie is 3.\"\n",
-    "\n",
-    "# Task: Extract all ages\n",
-    "# Thinking: Find all numbers\n",
-    "# Regex pseudo code: find digits\n",
-    "\n",
-    "regex_attempt1 = \"(\\d)\" # <= Find digits\n",
-    "\n",
-    "for m in re.finditer(regex_attempt1, ages): \n",
-    "    print(\"Match starts at\",m.start(), \"ends at\", m.end(), \"and contains\", m.group())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -212,11 +186,29 @@
     }
    ],
    "source": [
+    "ages = \"Homer is 38 years old, Marge is 36 years old, Bart is 10 years old, Lisa is 8 years old and Maggie is 3.\"\n",
+    "\n",
+    "# Task: Extract all ages\n",
+    "# Thinking: Find all numbers\n",
+    "# Regex pseudo code: find digits\n",
+    "\n",
+    "regex_attempt1 = \"(\\d+)\" # <= Find digits\n",
+    "\n",
+    "for m in re.finditer(regex_attempt1, ages): \n",
+    "    print(\"Match starts at\",m.start(), \"ends at\", m.end(), \"and contains\", m.group())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Task: Extract all ages\n",
     "# Thinking: Find all numbers\n",
     "# Regex pseudo code: find digits, clump consecutive digits together\n",
     "\n",
-    "regex_attempt1 = \"(\\d+)\" # <= Find digits and 1 or more repititions\n",
+    "regex_attempt1 = \"(\\d\\d\\d)\" # <= Find digits and 1 or more repititions\n",
     "\n",
     "for m in re.finditer(regex_attempt1, ages): \n",
     "    print(\"Match starts at\",m.start(), \"ends at\", m.end(), \"and contains\", m.group())"
@@ -246,21 +238,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n",
-      "[]\n",
-      "[]\n"
+      "['201']\n",
+      "['708']\n",
+      "['708']\n"
      ]
     }
    ],
    "source": [
-    "area_code_regex = r\"type_correct_regex_expression_here\"\n",
+    "area_code_regex = r\"\\d+-(\\d+)-\\d+-\\d+\"\n",
     "\n",
     "for ac in [\"1-201-123-1234\", \"98-708-567-7890\", \"0-708-333-4444\"]:\n",
     "    print(re.findall(area_code_regex, ac))"
@@ -289,7 +281,59 @@
     "\n",
     "Practically speaking, although _many_ poeple attempt it, regular expressions are not the correct choise to parse html (web) pages or xml documents.\n",
     "\n",
+    "\n",
     "Computer science students often learn about context free grammars. CFGs _can_ parse recursive strings and are often used to parse programming languages. Unfortunately, CFGs are out of scope for this course."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rafael\n",
+      "Isaac\n"
+     ]
+    }
+   ],
+   "source": [
+    "bestphysicist = ['Rafael Vescovi, PhD',\n",
+    "                 'Isaac Newton, physicist']\n",
+    "\n",
+    "if data < armagedon:\n",
+    "    rexp = \"(?P<x>\\d)(?P<y>\\d)\"\n",
+    "else:\n",
+    "    rexp = \"(?P<y>\\d)(?P<x>\\d)\"\n",
+    "    \n",
+    "for k in bestphysicist:\n",
+    "    m = re.match(r\"(?P<Name>\\w+) (?P<surname>\\w+), \\w+\", k)\n",
+    "    print(m.group('Name'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import multiprocessing as mp\n",
+    "import time\n",
+    "\n",
+    "def run(x):\n",
+    "  return x**2\n",
+    "\n",
+    "start = time.time()\n",
+    "\n",
+    "vect = list(range(2))\n",
+    "print(vect)\n",
+    "pool = mp.Pool(processes=1)\n",
+    "results = pool.map(run, vect)\n",
+    "print(results)\n",
+    "end = time.time()\n",
+    "print(\"Seconds:{}\".format(end - start))\n"
    ]
   },
   {
@@ -316,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
