--- a/assigments/NAME_SURNAME_ASSIGN_1_1.ipynb
+++ b/assigments/NAME_SURNAME_ASSIGN_1_1.ipynb
@@ -12,66 +12,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Instructions\n",
-    "* Rename this notebook with your NAME_LASTNAME_ASSIGN_1\n",
-    "* Finish the test on this notebook\n",
-    "* Download your notebook as a PDF\n",
-    "* Turn in both the notebook and PDF (in my case I would get two files RAFAEL_VESCOVI_ASSIGN_1.pdf and RAFAEL_VESCOVI_ASSIGN_1.ipynb)\n",
-    "* Show the output of your code working on the sample data, like below.  \n",
-    "* If techniques are specified, use them.  Otherwise, feel free to solve the problem how you want.  \n",
-    "* Try to keep your code clean, concise and avoid loops if necessary.  \n",
-    "* You have to show your work (code).\n",
-    "* You will be graded:\n",
-    "    * The functionality of your code (Does it do what it was meant to)\n",
-    "    * Showing the output on the sample data provided\n",
-    "    * How concise it is (did you use a for loop when you could have used a comprehension for instance).  Simply put, try and write clean, concise and readable code (don't use 10 lines for what could have been done in 4).\n",
-    "    * Even if the answer isn't perfect, make an honest attempt as partial credit will be given.\n",
-    "* you should not have to explicitly use  a for loop except for question 12, meaning it is possible to complete the entire assignment without using the keyword \"for\".\n",
-    "* the only third party functions/modules you are allowed to use are permutations and combinations from itertools.  yes, there is a built in median function in numpy, but the idea is to program yourself and solve the problems on your own using basic python techniques"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Sample Question\n",
-    "* Create a UDF that adds 2 to a number"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7\n"
-     ]
-    }
-   ],
-   "source": [
-    "def add_func(x):\n",
-    "    return(x+2)\n",
-    "\n",
-    "number = add_func(a)\n",
-    "print(number)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Question 1\n",
     "* Create a function that takes 2 lists as params, of equal length and does the following:\n",
     "    * returns a dictionary where the keys are the first list and the values are the second list\n",
@@ -186,14 +126,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# my_func(1,2,3)\n",
-    "    # do some stuff\n",
-    "    \n",
-    "# return_lst = [1,4,9]"
+    "def my_func(*x):\n",
+    "    return [x[i]*x[i] for i in range(len(x))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = my_func(1,2,3,4,5,6,7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7]\n",
+      "[1, 4, 9, 16, 25, 36, 49]\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)\n",
+    "print(b)\n",
+    "print(type(b))"
    ]
   },
   {
@@ -201,9 +169,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# for this pass in the numberse 1,2,3"
-   ]
+   "source": []
   }
  ],
  "metadata": {
