--- a/lectures/Lecture 10 - RegExp.ipynb
+++ b/lectures/Lecture 10 - RegExp.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -170,23 +170,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Match starts at 9 ends at 11 and contains 38\n",
-      "Match starts at 32 ends at 34 and contains 36\n",
-      "Match starts at 54 ends at 56 and contains 10\n",
-      "Match starts at 76 ends at 77 and contains 8\n",
-      "Match starts at 102 ends at 103 and contains 3\n"
+      "Match starts at 8 ends at 11 and contains 102\n",
+      "Match starts at 22 ends at 24 and contains 38\n",
+      "Match starts at 45 ends at 47 and contains 36\n",
+      "Match starts at 67 ends at 69 and contains 10\n",
+      "Match starts at 89 ends at 90 and contains 8\n",
+      "Match starts at 115 ends at 116 and contains 3\n"
      ]
     }
    ],
    "source": [
-    "ages = \"Homer is 38 years old, Marge is 36 years old, Bart is 10 years old, Lisa is 8 years old and Maggie is 3.\"\n",
+    "ages = \"Papa is 102, Homer is 38 years old, Marge is 36 years old, Bart is 10 years old, Lisa is 8 years old and Maggie is 3.\"\n",
     "\n",
     "# Task: Extract all ages\n",
     "# Thinking: Find all numbers\n",
@@ -200,15 +201,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Match starts at 8 ends at 9 and contains 1\n",
+      "Match starts at 9 ends at 10 and contains 0\n",
+      "Match starts at 10 ends at 11 and contains 2\n",
+      "Match starts at 22 ends at 23 and contains 3\n",
+      "Match starts at 23 ends at 24 and contains 8\n",
+      "Match starts at 45 ends at 46 and contains 3\n",
+      "Match starts at 46 ends at 47 and contains 6\n",
+      "Match starts at 67 ends at 68 and contains 1\n",
+      "Match starts at 68 ends at 69 and contains 0\n",
+      "Match starts at 89 ends at 90 and contains 8\n",
+      "Match starts at 115 ends at 116 and contains 3\n"
+     ]
+    }
+   ],
    "source": [
     "# Task: Extract all ages\n",
     "# Thinking: Find all numbers\n",
     "# Regex pseudo code: find digits, clump consecutive digits together\n",
     "\n",
-    "regex_attempt1 = \"(\\d\\d\\d)\" # <= Find digits and 1 or more repititions\n",
+    "regex_attempt1 = \"(\\d|\\d\\d)\" # <= Find digits and 1 or more repititions\n",
     "\n",
     "for m in re.finditer(regex_attempt1, ages): \n",
     "    print(\"Match starts at\",m.start(), \"ends at\", m.end(), \"and contains\", m.group())"
@@ -287,15 +306,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rafael\n",
-      "Isaac\n"
+      "Vescovi ,  Rafael\n",
+      "Newton ,  Isaac\n"
      ]
     }
    ],
@@ -303,37 +322,10 @@
     "bestphysicist = ['Rafael Vescovi, PhD',\n",
     "                 'Isaac Newton, physicist']\n",
     "\n",
-    "if data < armagedon:\n",
-    "    rexp = \"(?P<x>\\d)(?P<y>\\d)\"\n",
-    "else:\n",
-    "    rexp = \"(?P<y>\\d)(?P<x>\\d)\"\n",
-    "    \n",
+    " \n",
     "for k in bestphysicist:\n",
     "    m = re.match(r\"(?P<Name>\\w+) (?P<surname>\\w+), \\w+\", k)\n",
-    "    print(m.group('Name'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import multiprocessing as mp\n",
-    "import time\n",
-    "\n",
-    "def run(x):\n",
-    "  return x**2\n",
-    "\n",
-    "start = time.time()\n",
-    "\n",
-    "vect = list(range(2))\n",
-    "print(vect)\n",
-    "pool = mp.Pool(processes=1)\n",
-    "results = pool.map(run, vect)\n",
-    "print(results)\n",
-    "end = time.time()\n",
-    "print(\"Seconds:{}\".format(end - start))\n"
+    "    print(m.group('surname'), ', ',m.group('Name'))"
    ]
   },
   {
